--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Yew App</title>
+        <title>Cira Panel</title>
+        <style>
+            body, html {
+                margin: 0;
+                padding: 0;
+            }
+
+            body {
+                height: 100vh;
+                width: 100vw;
+            }
+        </style>
     </head>
 </html>
